Continuation fix for bug 311106: expire history entries on the pref changed callback for the expire time, so that the history view and the menus update live as you change the pref.